--- a/.github/workflows/static_code_analysis.yaml
+++ b/.github/workflows/static_code_analysis.yaml
@@ -3,8 +3,7 @@ name: Static Code Analysis
 on: push
 
 env:
-  # Please adapt to package name
-  MAIN_SRC_DIR: ./my_microservice
+  MAIN_SRC_DIR: ./drs3
 
 jobs:
   static-code-analysis:
